Enrutamiento en angular

--- a/src/app/publico/pagina-maestra/encabezado/encabezado.component.html
+++ b/src/app/publico/pagina-maestra/encabezado/encabezado.component.html
@@ -1,22 +1,25 @@
 <nav class="encabezado">
     <div>
-      <a href="#!" class="brand-logo">UrbanNav</a>
+      <a routerLink="/inicio" class="brand-logo">UrbanNav</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="badges.html">Inicio</a></li>
-        <li><a href="collapsible.html">Misión</a></li>
-        <li><a href="mobile.html">Visión</a></li>
-        <li><a href="mobile.html">PQRS</a></li>
-        <li><a href="mobile.html">Iniciar Sesión</a></li>
-        <li><a href="mobile.html">Cambiar clave</a></li>
-        <li><a href="mobile.html">Cerrar Sesión</a></li>
+        <li><a routerLink="/inicio">Inicio</a></li>
+        <li><a routerLink="/mision">Misión</a></li>
+        <li><a routerLink="/vision">Visión</a></li>
+        <li><a routerLink="/pqrs">PQRS</a></li>
+        <li><a routerLink="/seguridad/identificar-usuario">Iniciar Sesión</a></li>
+        <li><a routerLink="/seguridad/cambiar-clave">Cambiar clave</a></li>
+        <li><a routerLink="/seguridad/cerrar-sesion">Cerrar Sesión</a></li>
       </ul>
     </div>
   </nav>
 
   <ul class="sidenav" id="mobile-demo">
-    <li><a href="sass.html">Sass</a></li>
-    <li><a href="badges.html">Components</a></li>
-    <li><a href="collapsible.html">Javascript</a></li>
-    <li><a href="mobile.html">Mobile</a></li>
+    <li><a routerLink="/inicio">Inicio</a></li>
+        <li><a routerLink="/mision">Misión</a></li>
+        <li><a routerLink="/vision">Visión</a></li>
+        <li><a routerLink="/pqrs">PQRS</a></li>
+        <li><a routerLink="/seguridad/identificar-usuario">Iniciar Sesión</a></li>
+        <li><a routerLink="/seguridad/cambiar-clave">Cambiar clave</a></li>
+        <li><a routerLink="/seguridad/cerrar-sesion">Cerrar Sesión</a></li>
   </ul>
