--- a/src/app/publico/inicio/inicio.component.html
+++ b/src/app/publico/inicio/inicio.component.html
@@ -1,15 +1,15 @@
 <body>
     <section>
 
-        <article class="color-1"><img src="" alt="">
+        <article class="color-1"><img src="../../../imagenes/b2ee94d7-dbd4-465b-b2b7-a316312085fa.jpg" alt="">
             Descubre cómo UrbanNav mejora la movilidad urbana con rutas optimizadas y actualizaciones en tiempo real. Este artículo explora cómo la aplicación está dando forma a un futuro más conectado y eficiente para todos.
         </article>
 
-        <article class="color-2"><img src="" alt="">
+        <article class="color-2"><img src="../../../imagenes/urbannav2.jpg" alt="">
             Explora las últimas innovaciones de UrbanNav que están cambiando la forma en que nos movemos por la ciudad. Desde tecnologías avanzadas hasta características revolucionarias, este artículo destaca cómo UrbanNav lidera la revolución en el transporte urbano.
         </article>
 
-        <article class="color-1"><img src="" alt="">
+        <article class="color-1"><img src="../../../imagenes/b2ee94d7-dbd4-465b-b2b7-a316312085fa.jpg" alt="">
             Descubre cómo UrbanNav crea rutas eficientes para tu viaje diario. Desde algoritmos avanzados hasta datos en tiempo real, este artículo te lleva detrás de escena para entender cómo UrbanNav mejora tu experiencia de transporte.
         </article>
 
