--- a/src/app/publico/mision/mision.component.html
+++ b/src/app/publico/mision/mision.component.html
@@ -1,1 +1,33 @@
-<p>mision works!</p>
+<div class="container mx-auto mt-16">
+  <h1 class="text-5xl text-center">Misión de UrbanNav</h1>
+  <div class="container w-6/12 mx-auto mt-5 text-justify">
+    <p class="mt-5">
+      En UrbanNav, nos hemos embarcado en una misión apasionante y transformadora: redefinir la experiencia de
+      transporte en entornos urbanos. Nuestra visión es crear ciudades más conectadas, eficientes y sostenibles, donde
+      cada viaje sea una experiencia sin complicaciones y contribuya a un futuro más respetuoso con el medio ambiente.
+    </p>
+    <p class="mt-5">
+      Nos comprometemos a proporcionar soluciones de transporte inteligentes que vayan más allá de la mera conveniencia.
+      Buscamos empoderar a los habitantes urbanos al ofrecer rutas optimizadas, actualizaciones en tiempo real y
+      opciones innovadoras que se adapten a sus necesidades cambiantes.
+    </p>
+    <p class="mt-5">
+      La innovación tecnológica es la piedra angular de nuestro enfoque. Desde algoritmos avanzados hasta la integración
+      de las últimas tecnologías, trabajamos incansablemente para asegurar que UrbanNav sea líder en la revolución del
+      transporte urbano. Queremos que cada usuario experimente la eficiencia, comodidad y confianza que solo una
+      solución de transporte verdaderamente inteligente puede brindar.
+    </p>
+    <p class="mt-5">
+      Además, nos apasiona la sostenibilidad. No solo estamos comprometidos con la eficiencia, sino también con la
+      creación de un impacto positivo en el medio ambiente. Desde fomentar opciones de transporte compartido hasta
+      incentivar medios de transporte ecológicos, UrbanNav se esfuerza por ser parte activa de la construcción de
+      ciudades más verdes y habitables.
+    </p>
+    <p class="mt-5">
+      En resumen, nuestra misión en UrbanNav es ser el catalizador de un cambio positivo en la movilidad urbana. Nos
+      esforzamos por superar las expectativas, impulsar la innovación y contribuir a un mundo donde cada viaje cuente.
+      Estamos comprometidos con la mejora continua y con ser líderes en la transformación del transporte urbano hacia un
+      futuro más conectado, eficiente y sostenible para todos."
+    </p>
+  </div>
+</div>
