--- a/src/app/publico/vision/vision.component.html
+++ b/src/app/publico/vision/vision.component.html
@@ -1,1 +1,25 @@
-<p>vision works!</p>
+<div class="container mx-auto mt-16">
+    <h1 class="text-5xl text-center">Vision de UrbanNav</h1>
+    <div class="container w-6/12 mx-auto mt-5 text-justify">
+      <p class="mt-5">
+        En UrbanNav, visualizamos un futuro donde la movilidad urbana sea sinónimo de eficiencia, comodidad y sostenibilidad. Nos esforzamos por ser líderes en la creación de ciudades conectadas, donde cada individuo tenga acceso a soluciones de transporte inteligentes que mejoren su calidad de vida y contribuyan a la construcción de comunidades más vibrantes y sostenibles.
+      </p>
+  
+      <p class="mt-5">
+        Vemos a UrbanNav como el catalizador que impulsa la evolución del transporte urbano. Buscamos ser reconocidos no solo como una aplicación de navegación, sino como un socio confiable que transforma la manera en que las personas se desplazan en el entorno urbano. Nos imaginamos un mundo donde la planificación de rutas sea intuitiva, los tiempos de viaje se reduzcan significativamente y cada elección de transporte tenga un impacto positivo en el medio ambiente.
+      </p>
+  
+      <p class="mt-5">
+        En nuestra visión del futuro, UrbanNav será sinónimo de innovación continua. Nos esforzamos por anticipar y satisfacer las necesidades cambiantes de las comunidades urbanas, utilizando tecnologías de vanguardia y desarrollando soluciones que hagan que cada viaje sea una experiencia fluida y enriquecedora.
+      </p>
+  
+      <p class="mt-5">
+        La sostenibilidad es un pilar fundamental de nuestra visión. Nos visualizamos como un actor clave en la construcción de ciudades más ecológicas, donde las opciones de transporte compartido y los medios de transporte respetuosos con el medio ambiente sean la norma. Contribuir activamente a la reducción de la huella de carbono y promover un estilo de vida más sostenible son elementos fundamentales de nuestro camino hacia el futuro.
+      </p>
+  
+      <p class="mt-5">
+        En resumen, en UrbanNav aspiramos a ser la fuerza impulsora que redefine la movilidad urbana, liderando el camino hacia ciudades más conectadas, eficientes y sostenibles. Nos esforzamos por ser reconocidos como el referente en soluciones de transporte inteligentes, marcando la pauta para un futuro donde cada ciudadano disfrute de un viaje más inteligente, ágil y respetuoso con el medio ambiente."
+      </p>
+    </div>
+  </div>
+  
