--- a/src/app/modulos/seguridad/identificacion-twofa/identificacion-twofa.component.html
+++ b/src/app/modulos/seguridad/identificacion-twofa/identificacion-twofa.component.html
@@ -1,18 +1,18 @@
 <div id="login-page" class="row">
-    <div class="col s12 z-depth-6 card-panel">
-      <form class="login-form">
-        <div class="row">
+  <div class="col s12 z-depth-6 card-panel">
+    <form class="login-form" [formGroup]="fGroup">
+      <div class="row">
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <input formControlName="codigo" class="validate" id="2fa" type="text">
+          <label for="2fa" data-error="wrong" data-success="right">Código </label>
         </div>
-        <div class="row">
-          <div class="input-field col s12">
-            <input class="validate" id="2fa" type="text">
-            <label for="2fa" data-error="wrong" data-success="right">Código </label>
-          </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <button (click)="ValidarCodigo2fa()" class="btn waves-effect waves-light col s12">Validar</button>
         </div>
-        <div class="row">
-          <div class="input-field col s12">
-            <a href="#" class="btn waves-effect waves-light col s12">Validar</a>
-          </div>
-        </div>
-      </form>
-    </div>
+      </div>
+    </form>
+  </div>
