--- a/src/app/publico/inicio/inicio.component.css
+++ b/src/app/publico/inicio/inicio.component.css
@@ -47,6 +47,11 @@ aside {
 
 @media (min-width: 768px) {
 
+    body{
+        display: flex;
+        flex-direction: row;
+    }
+
    section {
         width: 70vw;
         height: 76.3vh;
