--- a/src/app/modulos/seguridad/inicio-seguridad/inicio-seguridad.component.html
+++ b/src/app/modulos/seguridad/inicio-seguridad/inicio-seguridad.component.html
@@ -1,12 +1,13 @@
-<section class="flex h-[91vh] text-white">
+<section>
     <div
       class="relative hidden w-1/2 items-center bg-gray-500 bg-cover bg-no-repeat lg:flex" class="imagen"
       style="
-        background-image: url(https://images.unsplash.com/photo-1609444074490-a4eb06f5ebf0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1925&q=80);
+        background-image: url(https://img3.wallspic.com/previews/6/5/0/4/7/174056/174056-parque_nacional_jasper_de_canada-carretera-carretera_forestal-montana-ecorregion-x750.jpg);
+        filter: saturate(50%);
       "
     >
       <div class="absolute inset-0 z-0 bg-black opacity-60"></div>
-      <div class="z-10 w-full px-24">
+      <div class="frase">
         <h1 class="text-left text-5xl font-bold tracking-wide">
           Trazando el futuro
         </h1>
