--- a/src/app/publico/inicio/inicio.component.css
+++ b/src/app/publico/inicio/inicio.component.css
@@ -21,28 +21,26 @@ section img {
 }
 
 .color-1 img {
-    border-bottom: 0.625em solid #0D0CB5;
+    border-bottom: 0.625em solid #5C5470;
 }
 
 .color-2 img {
-    border-bottom: 0.625em solid #C82121;
+    border-bottom: 0.625em solid #B9B4C7;
 }
 
 aside {
-    background: #C82121;
-    color: white;
-    font-size: 1.875em;
+    background: #FAF0E6;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .informativo {
-    background: white;
-    height: 5em;
     width: 80%;
-    border-radius: 0.625em;
-    margin: 0em 0em 2em;
+}
+
+h4{
+    margin: 16px
 }
 
 @media (min-width: 768px) {
