--- a/src/app/publico/inicio/inicio.component.html
+++ b/src/app/publico/inicio/inicio.component.html
@@ -1,25 +1,25 @@
 <body>
     <section>
 
-        <article class="color-1"><img src="../../../imagenes/b2ee94d7-dbd4-465b-b2b7-a316312085fa.jpg" alt="">
+        <article class="color-1"><img src="https://img.freepik.com/foto-gratis/coche-3d-ciudad-vibrante-noche_23-2150796972.jpg?w=740&t=st=1699722322~exp=1699722922~hmac=3a9c83c3c317b0cab361f5004fa0cfabcc75f6dd9753d8d9cc4ae68002e69ad2" alt="">
             Descubre cómo UrbanNav mejora la movilidad urbana con rutas optimizadas y actualizaciones en tiempo real. Este artículo explora cómo la aplicación está dando forma a un futuro más conectado y eficiente para todos.
         </article>
 
-        <article class="color-2"><img src="../../../imagenes/urbannav2.jpg" alt="">
+        <article class="color-2"><img src="https://img1.wallspic.com/previews/9/3/9/5/35939/35939-audi_r8_le_mans_concepto-x750.jpg" alt="">
             Explora las últimas innovaciones de UrbanNav que están cambiando la forma en que nos movemos por la ciudad. Desde tecnologías avanzadas hasta características revolucionarias, este artículo destaca cómo UrbanNav lidera la revolución en el transporte urbano.
         </article>
 
-        <article class="color-1"><img src="../../../imagenes/b2ee94d7-dbd4-465b-b2b7-a316312085fa.jpg" alt="">
+        <article class="color-1"><img src="https://img.freepik.com/foto-gratis/coche-circulando-carretera_1088-51.jpg?size=626&ext=jpg&ga=GA1.1.1826414947.1699660800&semt=ais" alt="">
             Descubre cómo UrbanNav crea rutas eficientes para tu viaje diario. Desde algoritmos avanzados hasta datos en tiempo real, este artículo te lleva detrás de escena para entender cómo UrbanNav mejora tu experiencia de transporte.
         </article>
 
-        <article class="color-2"><img src="" alt="">
+        <article class="color-2"><img src="https://img3.wallspic.com/previews/6/5/0/4/7/174056/174056-parque_nacional_jasper_de_canada-carretera-carretera_forestal-montana-ecorregion-x750.jpg" alt="">
             Explora cómo UrbanNav contribuye a la sostenibilidad urbana. Desde opciones de transporte compartido hasta incentivos para medios ecológicos, este artículo destaca el papel clave de UrbanNav en la creación de ciudades más verdes y respetuosas con el medio ambiente.
         </article>
 
     </section>
 
     <aside>
-        <h4>"Trazando el Futuro: UrbanNav, tu Guía Eficiente en la Ciudad"</h4>
+        <h5>"UrbanNav, tu Guía Eficiente en la Ciudad"</h5>
         <article class="informativo">¡Navega la ciudad con UrbanNav y descubre la ruta más rápida hacia tu destino! En noticias recientes, nuestro servicio ha reducido los tiempos de viaje en un 20%, haciendo que la movilidad urbana sea más eficiente que nunca. ¡Viaja con nosotros y experimenta la revolución del transporte urbano!</article>
     </aside>
