--- a/src/app/modulos/seguridad/usuario/listar-usuario/listar-usuario.component.html
+++ b/src/app/modulos/seguridad/usuario/listar-usuario/listar-usuario.component.html
@@ -27,9 +27,9 @@
         <td>{{u.celular}}</td>
         <td>{{u.rolId}}</td>
         <td>
-            <a routerLink="/seguridad/usuario-editar/{{u._id}}" class="btn btn-orange">Editar usuario</a>
+            <a routerLink="/seguridad/usuario-editar/{{u._id}}" class="btn orange">Editar usuario</a>
             &nbsp;
-            <a routerLink="/seguridad/usuario-eliminar/{{u._id}}" class="btn btn-red">Eliminar usuario</a>
+            <a routerLink="/seguridad/usuario-eliminar/{{u._id}}" class="btn red">Eliminar usuario</a>
         </td>
       </tr>
       <!-- Agrega más filas según sea necesario -->
